Fix advanced search button on small screens
Once the button was pressed, part of the form appeared next to the
button instead of appearing below it.

--- a/app/assets/stylesheets/advanced_search.scss
+++ b/app/assets/stylesheets/advanced_search.scss
@@ -1,7 +1,6 @@
 .advanced-search {
   color: $link;
   cursor: pointer;
-  float: left;
   margin: $line-height 0;
 
   @include breakpoint(medium) {
